--- a/values.yaml
+++ b/values.yaml
@@ -1,4 +1,5 @@
-stream_duration: 60
+stream_duration: 5
+latest: false # overwrite latest file
 
 binance:
   base_url: wss://stream.binance.com:9443
@@ -11,7 +12,6 @@ binance:
     - ethusdt
     - uniusdc
     - usdcusdt
-    - wbtcusdt
     - ethdai
 
 mainnet:
