--- a/values.yaml
+++ b/values.yaml
@@ -8,8 +8,8 @@ execution:
   token0_input: 0.01 # ETH
   token0_decimals: 18
   token1_decimals: 6
-  binance_fee: 0.001 # https://www.binance.com/en/fee/trading
-  min_edge: 10_000 # 1 cent
+  binance_fee: 0.00095 # https://www.binance.com/en/fee/trading
+  min_edge: 50_000 # 1 cent # 10_000
   binance_tick_size: 0.01 # 1 cent
 
 binance:
