--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,13 @@
-BINANCE_API_KEY=""
-BINANCE_API_SECRET=""
-ALCHEMY_API_KEY=""
-ETHERSCAN_API_KEY=""
+BINANCE_API_KEY=
+BINANCE_API_SECRET=
+BINANCE_API_KEY_TESTNET=
+BINANCE_API_SECRET_TESTNET=
+ALCHEMY_API_KEY=
+INFURA_API_KEY=
+ETHERSCAN_API_KEY=
+WALLET_ADDRESS=
+PRIVATE_KEY=
+WALLET_ADDRESS_TESTNET=
+PRIVATE_KEY_TESTNET=
+TELEGRAM_TOKEN=
+TELEGRAM_CHAT_ID=
