--- a/values_ec2.yaml
+++ b/values_ec2.yaml
@@ -11,9 +11,9 @@ execution:
   gas_reserve: 0.000001 # ensuring enough gas left for swaps
 
 binance:
-  base_url_rpc: https://13.212.92.126/api
+  base_url_rpc: https://13.212.92.126
   base_url_rpc_testnet: https://testnet.binance.vision
-  base_url_ws: wss://13.212.92.126:8080
+  base_url_ws: wss://13.212.92.126
 
 unichain:
   chain_id: 130
