--- a/values_remote.yaml
+++ b/values_remote.yaml
@@ -1,4 +1,5 @@
 execution:
+  version: "1.3.0"
   testnet: False
   token0_input: 0.0020 # ETH
   token0_decimals: 18
@@ -17,6 +18,7 @@ binance:
 
 unichain:
   chain_id: 130
+  sequencer_rpc_url: https://mainnet-sequencer.unichain.org
   rpc_url: http://execution-client:8545
   ws_url: ws://execution-client:8546
   flashblocks_ws_url: wss://mainnet-flashblocks.unichain.org/ws
@@ -33,6 +35,7 @@ unichain:
 
 unichain-sepolia-testnet:
   chain_id: 1301
+  sequencer_rpc_url: https://sepolia-sequencer.unichain.org
   rpc_url: http://execution-client:8545
   ws_url: ws://execution-client:8546
   flashblocks_ws_url: wss://sepolia-flashblocks.unichain.org/ws
