--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,7 @@
 web3==7.12.0
-pandas==2.3.0
-ipykernel==6.29.5
-python-binance==1.0.29
 python-dotenv==1.1.1
 websockets==15.0.1
-plotly-express==0.4.1
 PyYAML==6.0.2
-pytest==8.4.2
 python-telegram-bot==22.4
-boto3==1.40.74
 brotli==1.2.0
+orjson==3.11.5
