--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,12 @@ utils/__pycache__/
 out/
 notebooks/
 latency-tests/
+
+# contracts
+contracts/cache/
+contracts/out/
+!contracts/broadcast
+contracts/broadcast/*/31337/
+contracts/broadcast/**/dry-run/
+contracts/docs/
+contracts/.env
